--- a/src/scss/_media-queries.scss
+++ b/src/scss/_media-queries.scss
@@ -296,8 +296,6 @@
   }
 
   .newWidget_text_container {
-    top: 1.5rem;
-    left: 3.5rem;
     gap: 0rem;
   }
 
